dashboard api init
